...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c60-du-bsT">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="472"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vE-cB-5qH">
                                        <rect key="frame" x="45" y="271" width="230" height="30"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" label="Login"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="H02-mH-Y0m"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
                                        <state key="normal" title="Login">
                                            <color key="titleShadowColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                                            <constraint firstAttribute="height" constant="29" id="LXY-F8-axi"/>
                                        </constraints>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="HAT address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dCn-2i-qjD">
                                        <rect key="frame" x="45" y="230" width="230" height="30"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="Enter your HAT address here" identifier="hatDomain" label="HAT address"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="zAs-Wa-YBK"/>
                                        </constraints>
...
                                <include reference="NgE-WG-3FP"/>
                                <exclude reference="iXb-rM-7fw"/>
                            </mask>
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Location" image="tabLocation" id="oXJ-LN-hg0"/>
                    <navigationItem key="navigationItem" title="GEOME" id="ZVM-od-qX4">
                        <barButtonItem key="rightBarButtonItem" style="done" id="tr1-R3-FvO">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="ogq-dR-8el">
                                <rect key="frame" x="279" y="9.5" width="25" height="25"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
...
                            <constraint firstItem="qSd-sf-Wpj" firstAttribute="leading" secondItem="4OX-H5-uOP" secondAttribute="leading" id="YHA-5f-qVn"/>
                            <constraint firstItem="0sz-5N-tcl" firstAttribute="top" secondItem="qSd-sf-Wpj" secondAttribute="bottom" id="aRZ-DN-c2b"/>
                            <constraint firstItem="qSd-sf-Wpj" firstAttribute="top" secondItem="00E-75-2hE" secondAttribute="bottom" id="kcG-8d-nFo"/>
                        </constraints>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" title="Data Offers" id="T1K-3p-iQe">
                        <barButtonItem key="rightBarButtonItem" style="done" id="7xK-07-QwC">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="rA5-ag-une">
                                <rect key="frame" x="282" y="11" width="22" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="Zm4-mn-pPm" id="SjO-Qr-6Sx"/>
                            <outlet property="delegate" destination="Zm4-mn-pPm" id="iRP-9x-4vb"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Data Plugs" id="1FU-2J-YdE">
                        <barButtonItem key="rightBarButtonItem" style="done" id="Xdg-iL-c6c">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" id="ucx-vY-mQZ">
                                <rect key="frame" x="282" y="11" width="22" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
...
