...
        self.getOffers()
        
        if self.specificMerchant == "" {
            
            self.createClassicOKAlertWith(
                alertMessage: "Please note that data offers are under beta testing. During this time, the following offers are not allowed: \n Offers requesting for PIIs (personal identity identifiers) \n Offers with cash payments for data",
                alertTitle: "Heads up!",
                okTitle: "OK",
                proceedCompletion: {})
        }
    }
    
    override func viewDidAppear(_ animated: Bool) {
        
...
