...
        let topSecret = HomeScreenObject(
            name: "Notables",
            description: "Notes to self",
            image: UIImage(named: Constants.ImageNames.notesImage)!)
        let geoMe = HomeScreenObject(
            name: "Locations",
            description: "My locations in time",
            image: UIImage(named: Constants.ImageNames.gpsOutlinedImage)!)
        let myStory = HomeScreenObject(
            name: "My Story",
            description: "My digital life",
            image: UIImage(named: Constants.ImageNames.socialFeedImage)!)
        let photoView = HomeScreenObject(
...
